--- a/ALBERT_Trials.ipynb
+++ b/ALBERT_Trials.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ALBERT Trials.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNxQwEDIrpSdqDU86TDt528",
+      "authorship_tag": "ABX9TyP4YtcwUN11rUP1wOMFaIy6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0pWuBWHyI7N0",
-        "outputId": "48fc9802-ad36-424f-e191-8b45405633c7"
+        "outputId": "590e339b-ce26-4b54-934f-42d9c6adb87b"
       },
       "source": [
         "import numpy as np # linear algebra\r\n",
@@ -58,15 +58,15 @@
         "import string\r\n",
         "import requests"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n"
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
           ],
           "name": "stdout"
         }
@@ -190,12 +190,12 @@
       "source": [
         "with open('/content/arranged_processed_data.pkl', 'rb') as f:\r\n",
         "  processed_data = pickle.load(f)\r\n",
-        "with open('/content/arranged_processed_label.pkl', 'rb') as f:\r\n",
-        "  processed_label = pickle.load(f)\r\n",
-        "with open('/content/vader_encodings.pkl', 'rb') as f:\r\n",
-        "  vader_encodings = pickle.load(f)"
+        "# with open('/content/arranged_processed_label.pkl', 'rb') as f:\r\n",
+        "#   processed_label = pickle.load(f)\r\n",
+        "# with open('/content/vader_encodings.pkl', 'rb') as f:\r\n",
+        "#   vader_encodings = pickle.load(f)"
       ],
-      "execution_count": 54,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -470,27 +470,31 @@
       "cell_type": "code",
       "metadata": {
         "id": "eydqrY6bnZEe",
-        "outputId": "1356a2a2-fed9-44d8-e415-0033a198a52c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7b5b8f13-2099-4dfa-be35-635754a2fe05"
       },
       "source": [
         "!pip install vaderSentiment\r\n",
         "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\r\n",
         "analyzer = SentimentIntensityAnalyzer()"
       ],
-      "execution_count": 59,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: vaderSentiment in /usr/local/lib/python3.7/dist-packages (3.3.2)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from vaderSentiment) (2.23.0)\n",
+            "Collecting vaderSentiment\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/76/fc/310e16254683c1ed35eeb97386986d6c00bc29df17ce280aed64d55537e9/vaderSentiment-3.3.2-py2.py3-none-any.whl (125kB)\n",
+            "\r\u001b[K     |██▋                             | 10kB 24.8MB/s eta 0:00:01\r\u001b[K     |█████▏                          | 20kB 30.1MB/s eta 0:00:01\r\u001b[K     |███████▉                        | 30kB 21.4MB/s eta 0:00:01\r\u001b[K     |██████████▍                     | 40kB 25.0MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 51kB 23.7MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 61kB 26.4MB/s eta 0:00:01\r\u001b[K     |██████████████████▏             | 71kB 17.8MB/s eta 0:00:01\r\u001b[K     |████████████████████▉           | 81kB 18.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████▍        | 92kB 17.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 102kB 17.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▋   | 112kB 17.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 122kB 17.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 133kB 17.7MB/s \n",
+            "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from vaderSentiment) (2.23.0)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (3.0.4)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (1.24.3)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (2.10)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (2020.12.5)\n"
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (2020.12.5)\n",
+            "Installing collected packages: vaderSentiment\n",
+            "Successfully installed vaderSentiment-3.3.2\n"
           ],
           "name": "stdout"
         }
@@ -516,10 +520,11 @@
         "      temp.append('neutral')\r\n",
         "    if vs['compound'] > 0.2:\r\n",
         "      temp.append('compound')\r\n",
+        "    temp=' '.join(temp)\r\n",
         "    vader_features.append(temp)\r\n",
         "  return vader_features"
       ],
-      "execution_count": 62,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -530,8 +535,31 @@
       "source": [
         "vader_features = addFeatures(processed_data)"
       ],
-      "execution_count": 63,
+      "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iP3AyiAm1Dxj",
+        "outputId": "ee13ea63-efb1-46f6-f4c9-a07bbc89d14a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(vader_features[0])"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "thank you for calling sprint . we care about everybody . how can i help you ? positive neutral compound\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -543,7 +571,127 @@
         "with open('vader_featured_sentences.pkl', 'wb') as f:\r\n",
         "  pickle.dump(vader_features, f)"
       ],
-      "execution_count": 66,
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jzW2SMM8_6s5",
+        "outputId": "a95c6d86-4953-4688-c08f-d78410639350",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\r\n",
+        "drive.mount('/content/gdrive')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "51mck6HOABlS"
+      },
+      "source": [
+        "with open('/content/gdrive/My Drive/iemocap/train/sentences.pkl', 'rb') as f:\r\n",
+        "    data = pickle.load(f)\r\n",
+        "with open('/content/gdrive/My Drive/iemocap/train/labels.pkl', 'rb') as f:\r\n",
+        "    labels = pickle.load(f)\r\n",
+        "with open('/content/gdrive/My Drive/iemocap/test/sentences.pkl', 'rb') as f:\r\n",
+        "    test_data = pickle.load(f)\r\n",
+        "with open('/content/gdrive/My Drive/iemocap/test/labels.pkl', 'rb') as f:\r\n",
+        "    test_labels = pickle.load(f)\r\n",
+        "with open('/content/gdrive/MyDrive/iemocap/train/conversation_length.pkl', 'rb') as f:\r\n",
+        "    train_convlen = pickle.load(f)\r\n",
+        "with open('/content/gdrive/MyDrive/iemocap/test/conversation_length.pkl', 'rb') as f:\r\n",
+        "    test_convlen = pickle.load(f)"
+      ],
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9DDsshw8AMd9"
+      },
+      "source": [
+        "def preprocessing(data,labels):\r\n",
+        "  processed_data=[]\r\n",
+        "  processed_label=[]\r\n",
+        "  for i in range(0,len(data)):\r\n",
+        "    for j in range(0,len(data[i])):\r\n",
+        "      intermediate_data=[]\r\n",
+        "      intermediate_label=[]\r\n",
+        "      for k in range(0,len(data[i][j])):\r\n",
+        "        text=data[i][j][k]\r\n",
+        "        if text != '<eos>'and text!='<pad>':\r\n",
+        "          intermediate_data.append(text)\r\n",
+        "      processed_data.append(intermediate_data)\r\n",
+        "  for i in labels:\r\n",
+        "    for j in i:\r\n",
+        "      processed_label.append(j)\r\n",
+        "  return processed_data,processed_label"
+      ],
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "i0EMVHzWAaVR"
+      },
+      "source": [
+        "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
+      ],
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PHT61jZ2AfIe"
+      },
+      "source": [
+        "for i in range(0,len(test_processed_data)):\r\n",
+        "  test_processed_data[i]=' '.join(test_processed_data[i])"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vh9RNmdFAuMo"
+      },
+      "source": [
+        "test_vader_features = addFeatures(test_processed_data)"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GWaX_nAIA2Na"
+      },
+      "source": [
+        "with open('test_vader_features.pkl', 'wb') as f:\r\n",
+        "  pickle.dump(test_vader_features, f)\r\n",
+        "with open('test_vader_labels.pkl', 'wb') as f:\r\n",
+        "  pickle.dump(test_processed_label, f)"
+      ],
+      "execution_count": 11,
       "outputs": []
     }
   ]
