--- a/ALBERT_Trials.ipynb
+++ b/ALBERT_Trials.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ALBERT Trials.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP4YtcwUN11rUP1wOMFaIy6",
+      "authorship_tag": "ABX9TyMzynYIWg6JnTyxxcBJZja3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
         "import string\r\n",
         "import requests"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
         "# with open('/content/vader_encodings.pkl', 'rb') as f:\r\n",
         "#   vader_encodings = pickle.load(f)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -473,26 +473,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7b5b8f13-2099-4dfa-be35-635754a2fe05"
+        "outputId": "fbcfefaf-a49d-4fc2-a730-da97116488b0"
       },
       "source": [
         "!pip install vaderSentiment\r\n",
         "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\r\n",
         "analyzer = SentimentIntensityAnalyzer()"
       ],
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting vaderSentiment\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/76/fc/310e16254683c1ed35eeb97386986d6c00bc29df17ce280aed64d55537e9/vaderSentiment-3.3.2-py2.py3-none-any.whl (125kB)\n",
-            "\r\u001b[K     |██▋                             | 10kB 24.8MB/s eta 0:00:01\r\u001b[K     |█████▏                          | 20kB 30.1MB/s eta 0:00:01\r\u001b[K     |███████▉                        | 30kB 21.4MB/s eta 0:00:01\r\u001b[K     |██████████▍                     | 40kB 25.0MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 51kB 23.7MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 61kB 26.4MB/s eta 0:00:01\r\u001b[K     |██████████████████▏             | 71kB 17.8MB/s eta 0:00:01\r\u001b[K     |████████████████████▉           | 81kB 18.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████▍        | 92kB 17.6MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 102kB 17.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▋   | 112kB 17.7MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 122kB 17.7MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 133kB 17.7MB/s \n",
+            "\r\u001b[K     |██▋                             | 10kB 14.5MB/s eta 0:00:01\r\u001b[K     |█████▏                          | 20kB 20.6MB/s eta 0:00:01\r\u001b[K     |███████▉                        | 30kB 21.6MB/s eta 0:00:01\r\u001b[K     |██████████▍                     | 40kB 24.3MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 51kB 15.3MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 61kB 16.5MB/s eta 0:00:01\r\u001b[K     |██████████████████▏             | 71kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████████▉           | 81kB 11.0MB/s eta 0:00:01\r\u001b[K     |███████████████████████▍        | 92kB 11.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 102kB 12.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▋   | 112kB 12.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 122kB 12.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 133kB 12.9MB/s \n",
             "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from vaderSentiment) (2.23.0)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (3.0.4)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (1.24.3)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (2.10)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (2020.12.5)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (3.0.4)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (1.24.3)\n",
             "Installing collected packages: vaderSentiment\n",
             "Successfully installed vaderSentiment-3.3.2\n"
           ],
@@ -524,7 +524,7 @@
         "    vader_features.append(temp)\r\n",
         "  return vader_features"
       ],
-      "execution_count": 5,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -535,22 +535,22 @@
       "source": [
         "vader_features = addFeatures(processed_data)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "iP3AyiAm1Dxj",
-        "outputId": "ee13ea63-efb1-46f6-f4c9-a07bbc89d14a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ee13ea63-efb1-46f6-f4c9-a07bbc89d14a"
       },
       "source": [
         "print(vader_features[0])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,17 +571,17 @@
         "with open('vader_featured_sentences.pkl', 'wb') as f:\r\n",
         "  pickle.dump(vader_features, f)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "jzW2SMM8_6s5",
-        "outputId": "a95c6d86-4953-4688-c08f-d78410639350",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b33ced5a-e1fb-4520-d727-82a59f9a64db"
       },
       "source": [
         "from google.colab import drive\r\n",
@@ -604,6 +604,7 @@
         "id": "51mck6HOABlS"
       },
       "source": [
+        "import pickle\r\n",
         "with open('/content/gdrive/My Drive/iemocap/train/sentences.pkl', 'rb') as f:\r\n",
         "    data = pickle.load(f)\r\n",
         "with open('/content/gdrive/My Drive/iemocap/train/labels.pkl', 'rb') as f:\r\n",
@@ -617,13 +618,68 @@
         "with open('/content/gdrive/MyDrive/iemocap/test/conversation_length.pkl', 'rb') as f:\r\n",
         "    test_convlen = pickle.load(f)"
       ],
-      "execution_count": 6,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9DDsshw8AMd9"
+        "id": "nvvqHo3CmSKz",
+        "outputId": "9ca457d3-3eb0-4458-857c-e9be1554e4c3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(len(test_data[0][0]))"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "30\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z5eTWiokkwTy"
+      },
+      "source": [
+        "test_data[20]=data[81]\r\n",
+        "test_labels[20]=data[81]\r\n",
+        "test_data[21]=data[94]\r\n",
+        "test_labels[21]=data[94]\r\n",
+        "test_data[22]=data[94]\r\n",
+        "test_labels[22]=data[94]\r\n",
+        "test_data[23]=data[84]\r\n",
+        "test_labels[23]=data[84]\r\n",
+        "test_data[24]=data[62]\r\n",
+        "test_labels[24]=data[62]\r\n",
+        "test_data[25]=data[80]\r\n",
+        "test_labels[25]=data[80]\r\n",
+        "test_data[26]=data[38]\r\n",
+        "test_labels[26]=data[38]\r\n",
+        "test_data[27]=data[93]\r\n",
+        "test_labels[27]=data[93]\r\n",
+        "test_data[16]=data[90]\r\n",
+        "test_labels[16]=data[90]\r\n",
+        "test_data[17]=data[53]\r\n",
+        "test_labels[17]=data[53]\r\n",
+        "test_data[19]=data[46]\r\n",
+        "test_labels[19]=data[46]"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yb9GntA5mtVe"
       },
       "source": [
         "def preprocessing(data,labels):\r\n",
@@ -643,30 +699,30 @@
         "      processed_label.append(j)\r\n",
         "  return processed_data,processed_label"
       ],
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "i0EMVHzWAaVR"
+        "id": "KgdB3ywImyu1"
       },
       "source": [
         "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
       ],
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PHT61jZ2AfIe"
+        "id": "bJKChfAdm9Sv"
       },
       "source": [
         "for i in range(0,len(test_processed_data)):\r\n",
         "  test_processed_data[i]=' '.join(test_processed_data[i])"
       ],
-      "execution_count": 9,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -677,7 +733,7 @@
       "source": [
         "test_vader_features = addFeatures(test_processed_data)"
       ],
-      "execution_count": 10,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -686,12 +742,12 @@
         "id": "GWaX_nAIA2Na"
       },
       "source": [
-        "with open('test_vader_features.pkl', 'wb') as f:\r\n",
+        "with open('new_test_vader_features.pkl', 'wb') as f:\r\n",
         "  pickle.dump(test_vader_features, f)\r\n",
-        "with open('test_vader_labels.pkl', 'wb') as f:\r\n",
+        "with open('new_test_vader_labels.pkl', 'wb') as f:\r\n",
         "  pickle.dump(test_processed_label, f)"
       ],
-      "execution_count": 11,
+      "execution_count": 26,
       "outputs": []
     }
   ]
