--- a/Final_ERC_Model.ipynb
+++ b/Final_ERC_Model.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Final_ERC_Model.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMtDVYvlM+Pa7oGUXyBgPd3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4M_DCFHatD2O",
-        "outputId": "2bd4428e-acbe-48a2-d879-35f790e7af95"
+        "outputId": "efdb3082-0801-4695-c6b3-2103fc94ec84"
       },
       "source": [
         "import numpy as np # linear algebra\r\n",
@@ -58,15 +57,15 @@
         "import string\r\n",
         "import requests"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n"
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
           ],
           "name": "stdout"
         }
@@ -79,7 +78,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yJv80z7Cy_NS",
-        "outputId": "0dd9e89a-fa22-4aed-a7ff-e330f49bead3"
+        "outputId": "49d1eee4-de41-4ca6-a461-f1b2df5ea94c"
       },
       "source": [
         "!wget --quiet https://raw.githubusercontent.com/tensorflow/models/master/official/nlp/bert/tokenization.py\r\n",
@@ -93,7 +92,7 @@
           "text": [
             "Collecting sentencepiece\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/f5/99/e0808cb947ba10f575839c43e8fafc9cc44e4a7a2c8f79c60db48220a577/sentencepiece-0.1.95-cp37-cp37m-manylinux2014_x86_64.whl (1.2MB)\n",
-            "\u001b[K     |████████████████████████████████| 1.2MB 5.8MB/s \n",
+            "\r\u001b[K     |▎                               | 10kB 25.1MB/s eta 0:00:01\r\u001b[K     |▌                               | 20kB 32.3MB/s eta 0:00:01\r\u001b[K     |▉                               | 30kB 22.0MB/s eta 0:00:01\r\u001b[K     |█                               | 40kB 25.6MB/s eta 0:00:01\r\u001b[K     |█▍                              | 51kB 27.7MB/s eta 0:00:01\r\u001b[K     |█▋                              | 61kB 30.2MB/s eta 0:00:01\r\u001b[K     |██                              | 71kB 20.1MB/s eta 0:00:01\r\u001b[K     |██▏                             | 81kB 21.4MB/s eta 0:00:01\r\u001b[K     |██▌                             | 92kB 20.2MB/s eta 0:00:01\r\u001b[K     |██▊                             | 102kB 20.4MB/s eta 0:00:01\r\u001b[K     |███                             | 112kB 20.4MB/s eta 0:00:01\r\u001b[K     |███▎                            | 122kB 20.4MB/s eta 0:00:01\r\u001b[K     |███▌                            | 133kB 20.4MB/s eta 0:00:01\r\u001b[K     |███▉                            | 143kB 20.4MB/s eta 0:00:01\r\u001b[K     |████                            | 153kB 20.4MB/s eta 0:00:01\r\u001b[K     |████▍                           | 163kB 20.4MB/s eta 0:00:01\r\u001b[K     |████▋                           | 174kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████                           | 184kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████▏                          | 194kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████▌                          | 204kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████▊                          | 215kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████                          | 225kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████▎                         | 235kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████▌                         | 245kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████▉                         | 256kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████                         | 266kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████▍                        | 276kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████▋                        | 286kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████                        | 296kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████▏                       | 307kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████▍                       | 317kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████▊                       | 327kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████                       | 337kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████▎                      | 348kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████▌                      | 358kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████▉                      | 368kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████                      | 378kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████▍                     | 389kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████▋                     | 399kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████                     | 409kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████▏                    | 419kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████▍                    | 430kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████▊                    | 440kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████                    | 450kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████▎                   | 460kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████▌                   | 471kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████▉                   | 481kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 491kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████▍                  | 501kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████▋                  | 512kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████▉                  | 522kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████▏                 | 532kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████▍                 | 542kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████▊                 | 552kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████                 | 563kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████▎                | 573kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████▌                | 583kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████▉                | 593kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████                | 604kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████▍               | 614kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████▋               | 624kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████▉               | 634kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████████▏              | 645kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████████▍              | 655kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████████▊              | 665kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████              | 675kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████▎             | 686kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████▌             | 696kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████▉             | 706kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 716kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████▎            | 727kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████▋            | 737kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████▉            | 747kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████████▏           | 757kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████████▍           | 768kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████████▊           | 778kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████████████           | 788kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████████████▎          | 798kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████████████▌          | 808kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████████████▉          | 819kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 829kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████████▎         | 839kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████████▋         | 849kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████████▉         | 860kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████████▏        | 870kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████████▍        | 880kB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████████▊        | 890kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 901kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████████████▎       | 911kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████████████▌       | 921kB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████████████▊       | 931kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 942kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▎      | 952kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▋      | 962kB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▉      | 972kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▏     | 983kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▍     | 993kB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▊     | 1.0MB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████████████     | 1.0MB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▎    | 1.0MB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▌    | 1.0MB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▊    | 1.0MB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 1.1MB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▎   | 1.1MB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▋   | 1.1MB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▉   | 1.1MB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▏  | 1.1MB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▍  | 1.1MB 20.4MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▊  | 1.1MB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████  | 1.1MB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▏ | 1.1MB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▌ | 1.1MB 20.4MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▊ | 1.2MB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████ | 1.2MB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▎| 1.2MB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▋| 1.2MB 20.4MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▉| 1.2MB 20.4MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 1.2MB 20.4MB/s \n",
             "\u001b[?25hInstalling collected packages: sentencepiece\n",
             "Successfully installed sentencepiece-0.1.95\n"
           ],
@@ -165,7 +164,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F4nxIhlqzH0s",
-        "outputId": "69c0c728-cd40-4029-e061-d49672d9cd91"
+        "outputId": "f133688f-78b8-4b36-884c-72d35f0d0f74"
       },
       "source": [
         "%%time\r\n",
@@ -177,8 +176,8 @@
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 5.09 s, sys: 669 ms, total: 5.76 s\n",
-            "Wall time: 10.9 s\n"
+            "CPU times: user 3.61 s, sys: 573 ms, total: 4.18 s\n",
+            "Wall time: 9.08 s\n"
           ],
           "name": "stdout"
         }
@@ -199,7 +198,7 @@
         "with open('/content/new_test_vader_labels.pkl', 'rb') as f:\r\n",
         "    test_processed_label = pickle.load(f)"
       ],
-      "execution_count": 6,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -211,7 +210,7 @@
         "processed_data=np.asarray(processed_data)\r\n",
         "Y=to_categorical(processed_label, num_classes=6)"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -223,7 +222,7 @@
         "sp_model_file = albert_layer.resolved_object.sp_model_file.asset_path.numpy()\r\n",
         "tokenizer = tokenization.FullSentencePieceTokenizer(sp_model_file)"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -235,7 +234,7 @@
         "train_input = albert_encode(processed_data, tokenizer, max_len=160)\r\n",
         "train_labels = Y"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -245,13 +244,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UfBwa_Yk1byd",
-        "outputId": "4a9101e5-41ca-47bc-da89-68626e3e7642"
+        "outputId": "8c1290ad-dbd4-4d54-a765-2c232173cf9e"
       },
       "source": [
         "model = build_model(albert_layer, max_len=160)\r\n",
         "model.summary()"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -292,7 +291,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XLORlbwY1gKZ",
-        "outputId": "5face25b-f643-489e-dfea-9fe01f0c58de"
+        "outputId": "c191af53-5b1e-4894-ceb6-12b822b75022"
       },
       "source": [
         "train_history = model.fit(\r\n",
@@ -301,23 +300,23 @@
         "    batch_size=1\r\n",
         ")"
       ],
-      "execution_count": 11,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Epoch 1/6\n",
-            "14097/14097 [==============================] - 526s 36ms/step - loss: 0.4336 - accuracy: 0.3021\n",
+            "14097/14097 [==============================] - 670s 47ms/step - loss: 0.4365 - accuracy: 0.2961\n",
             "Epoch 2/6\n",
-            "14097/14097 [==============================] - 510s 36ms/step - loss: 0.3221 - accuracy: 0.5597\n",
+            "14097/14097 [==============================] - 658s 47ms/step - loss: 0.3466 - accuracy: 0.4998\n",
             "Epoch 3/6\n",
-            "14097/14097 [==============================] - 509s 36ms/step - loss: 0.2501 - accuracy: 0.6918\n",
+            "14097/14097 [==============================] - 661s 47ms/step - loss: 0.2582 - accuracy: 0.6696\n",
             "Epoch 4/6\n",
-            "14097/14097 [==============================] - 510s 36ms/step - loss: 0.1924 - accuracy: 0.7749\n",
+            "14097/14097 [==============================] - 663s 47ms/step - loss: 0.1910 - accuracy: 0.7802\n",
             "Epoch 5/6\n",
-            "14097/14097 [==============================] - 510s 36ms/step - loss: 0.1434 - accuracy: 0.8459\n",
+            "14097/14097 [==============================] - 663s 47ms/step - loss: 0.1427 - accuracy: 0.8485\n",
             "Epoch 6/6\n",
-            "14097/14097 [==============================] - 510s 36ms/step - loss: 0.1187 - accuracy: 0.8701\n"
+            "14097/14097 [==============================] - 662s 47ms/step - loss: 0.1165 - accuracy: 0.8788\n"
           ],
           "name": "stdout"
         }
@@ -332,7 +331,7 @@
         "test_processed_data=np.asarray(test_processed_data)\r\n",
         "test_Y=to_categorical(test_processed_label, num_classes=6)"
       ],
-      "execution_count": 12,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -344,7 +343,7 @@
         "test_input = albert_encode(test_processed_data, tokenizer, max_len=160)\r\n",
         "test_labels = test_Y"
       ],
-      "execution_count": 13,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -355,7 +354,7 @@
       "source": [
         "y_pred=model.predict(test_input, batch_size=1)"
       ],
-      "execution_count": 14,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -365,7 +364,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kEWc_W-jCPSZ",
-        "outputId": "f6a40c77-9fb1-4607-a568-711168309d29"
+        "outputId": "a98c520e-b830-4cce-93c1-efa6d94d0ba3"
       },
       "source": [
         "y_pred1=np.argmax(y_pred,axis=1)\r\n",
@@ -373,13 +372,13 @@
         "print(\"Accuracy : \" + str(accuracy_score(test_processed_label, y_pred1)))\r\n",
         "print(\"Weighted F1-score : \" + str(f1_score(test_processed_label, y_pred1, average='weighted')))"
       ],
-      "execution_count": 15,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Accuracy : 0.6603295310519645\n",
-            "Weighted F1-score : 0.6637769439089796\n"
+            "Accuracy : 0.6428571428571429\n",
+            "Weighted F1-score : 0.6450342791947398\n"
           ],
           "name": "stdout"
         }
