--- a/ALBERT_Trials.ipynb
+++ b/ALBERT_Trials.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "ALBERT Trials.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMzynYIWg6JnTyxxcBJZja3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0pWuBWHyI7N0",
-        "outputId": "590e339b-ce26-4b54-934f-42d9c6adb87b"
+        "outputId": "3add91d3-0813-479b-ab01-78b3c30793ee"
       },
       "source": [
         "import numpy as np # linear algebra\r\n",
@@ -58,7 +57,7 @@
         "import string\r\n",
         "import requests"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,25 +472,25 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fbcfefaf-a49d-4fc2-a730-da97116488b0"
+        "outputId": "e42a4cb5-7284-412a-a941-1fc47ec7850d"
       },
       "source": [
         "!pip install vaderSentiment\r\n",
         "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\r\n",
         "analyzer = SentimentIntensityAnalyzer()"
       ],
-      "execution_count": 13,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting vaderSentiment\n",
             "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/76/fc/310e16254683c1ed35eeb97386986d6c00bc29df17ce280aed64d55537e9/vaderSentiment-3.3.2-py2.py3-none-any.whl (125kB)\n",
-            "\r\u001b[K     |██▋                             | 10kB 14.5MB/s eta 0:00:01\r\u001b[K     |█████▏                          | 20kB 20.6MB/s eta 0:00:01\r\u001b[K     |███████▉                        | 30kB 21.6MB/s eta 0:00:01\r\u001b[K     |██████████▍                     | 40kB 24.3MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 51kB 15.3MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 61kB 16.5MB/s eta 0:00:01\r\u001b[K     |██████████████████▏             | 71kB 11.7MB/s eta 0:00:01\r\u001b[K     |████████████████████▉           | 81kB 11.0MB/s eta 0:00:01\r\u001b[K     |███████████████████████▍        | 92kB 11.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 102kB 12.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▋   | 112kB 12.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 122kB 12.9MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 133kB 12.9MB/s \n",
+            "\r\u001b[K     |██▋                             | 10kB 23.5MB/s eta 0:00:01\r\u001b[K     |█████▏                          | 20kB 15.2MB/s eta 0:00:01\r\u001b[K     |███████▉                        | 30kB 13.2MB/s eta 0:00:01\r\u001b[K     |██████████▍                     | 40kB 12.7MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 51kB 7.7MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 61kB 7.3MB/s eta 0:00:01\r\u001b[K     |██████████████████▏             | 71kB 8.0MB/s eta 0:00:01\r\u001b[K     |████████████████████▉           | 81kB 8.9MB/s eta 0:00:01\r\u001b[K     |███████████████████████▍        | 92kB 8.9MB/s eta 0:00:01\r\u001b[K     |██████████████████████████      | 102kB 7.5MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▋   | 112kB 7.5MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 122kB 7.5MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 133kB 7.5MB/s \n",
             "\u001b[?25hRequirement already satisfied: requests in /usr/local/lib/python3.7/dist-packages (from vaderSentiment) (2.23.0)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (2.10)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (2020.12.5)\n",
             "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (3.0.4)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (2.10)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests->vaderSentiment) (1.24.3)\n",
             "Installing collected packages: vaderSentiment\n",
             "Successfully installed vaderSentiment-3.3.2\n"
@@ -524,7 +523,7 @@
         "    vader_features.append(temp)\r\n",
         "  return vader_features"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -581,13 +580,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b33ced5a-e1fb-4520-d727-82a59f9a64db"
+        "outputId": "9ec1a351-a2e6-4da2-f13e-401a4b59d82a"
       },
       "source": [
         "from google.colab import drive\r\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -618,31 +617,34 @@
         "with open('/content/gdrive/MyDrive/iemocap/test/conversation_length.pkl', 'rb') as f:\r\n",
         "    test_convlen = pickle.load(f)"
       ],
-      "execution_count": 8,
+      "execution_count": 55,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nvvqHo3CmSKz",
-        "outputId": "9ca457d3-3eb0-4458-857c-e9be1554e4c3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "nvvqHo3CmSKz"
       },
       "source": [
-        "print(len(test_data[0][0]))"
+        "for i in range(0,len(data)):\r\n",
+        "  print(len(data[i]))\r\n",
+        "  print(\"It is sentence : \" + str(i))"
       ],
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "30\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tBOUq4eebibN"
+      },
+      "source": [
+        "for i in range(0,len(test_data)):\r\n",
+        "  print(len(test_data[i]))\r\n",
+        "  print(\"It is sentence : \" + str(i))"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -651,29 +653,33 @@
       },
       "source": [
         "test_data[20]=data[81]\r\n",
-        "test_labels[20]=data[81]\r\n",
+        "test_labels[20]=labels[81]\r\n",
         "test_data[21]=data[94]\r\n",
-        "test_labels[21]=data[94]\r\n",
+        "test_labels[21]=labels[94]\r\n",
         "test_data[22]=data[94]\r\n",
-        "test_labels[22]=data[94]\r\n",
+        "test_labels[22]=labels[94]\r\n",
         "test_data[23]=data[84]\r\n",
-        "test_labels[23]=data[84]\r\n",
+        "test_labels[23]=labels[84]\r\n",
         "test_data[24]=data[62]\r\n",
-        "test_labels[24]=data[62]\r\n",
+        "test_labels[24]=labels[62]\r\n",
         "test_data[25]=data[80]\r\n",
-        "test_labels[25]=data[80]\r\n",
+        "test_labels[25]=labels[80]\r\n",
         "test_data[26]=data[38]\r\n",
-        "test_labels[26]=data[38]\r\n",
+        "test_labels[26]=labels[38]\r\n",
         "test_data[27]=data[93]\r\n",
-        "test_labels[27]=data[93]\r\n",
+        "test_labels[27]=labels[93]\r\n",
         "test_data[16]=data[90]\r\n",
-        "test_labels[16]=data[90]\r\n",
+        "test_labels[16]=labels[90]\r\n",
         "test_data[17]=data[53]\r\n",
-        "test_labels[17]=data[53]\r\n",
+        "test_labels[17]=labels[53]\r\n",
+        "test_data[18]=data[29]\r\n",
+        "test_labels[18]=labels[29]\r\n",
         "test_data[19]=data[46]\r\n",
-        "test_labels[19]=data[46]"
+        "test_labels[19]=labels[46]\r\n",
+        "test_data[7]=data[75]\r\n",
+        "test_labels[7]=labels[75]"
       ],
-      "execution_count": 9,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -699,7 +705,7 @@
         "      processed_label.append(j)\r\n",
         "  return processed_data,processed_label"
       ],
-      "execution_count": 20,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -710,7 +716,7 @@
       "source": [
         "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
       ],
-      "execution_count": 21,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -722,7 +728,7 @@
         "for i in range(0,len(test_processed_data)):\r\n",
         "  test_processed_data[i]=' '.join(test_processed_data[i])"
       ],
-      "execution_count": 24,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -731,9 +737,9 @@
         "id": "vh9RNmdFAuMo"
       },
       "source": [
-        "test_vader_features = addFeatures(test_processed_data)"
+        "test_vader_features = test_processed_data"
       ],
-      "execution_count": 25,
+      "execution_count": 59,
       "outputs": []
     },
     {
@@ -747,7 +753,7 @@
         "with open('new_test_vader_labels.pkl', 'wb') as f:\r\n",
         "  pickle.dump(test_processed_label, f)"
       ],
-      "execution_count": 26,
+      "execution_count": 60,
       "outputs": []
     }
   ]
